--- a/MotionSystem_.uproject
+++ b/MotionSystem_.uproject
@@ -18,6 +18,10 @@
 		{
 			"Name": "AnimationWarping",
 			"Enabled": true
+		},
+		{
+			"Name": "AnimationLocomotionLibrary",
+			"Enabled": true
 		}
 	]
 }
