--- a/MotionSystem_.uproject
+++ b/MotionSystem_.uproject
@@ -22,6 +22,10 @@
 		{
 			"Name": "AnimationLocomotionLibrary",
 			"Enabled": true
+		},
+		{
+			"Name": "MotionTrajectory",
+			"Enabled": true
 		}
 	]
 }
